<resources>
    <string name="app_name">CJLicencia</string>
    <string name="not_detected">NO DETECTADO</string>
    <string name="detected"> DETECTADO</string>
    <string name="status">ESTADO</string>
    <string name="active">ACTIVO</string>
    <string name="expired">EXPIRADO</string>
    <string name="virgin">INICIAL</string>
    <string name="instructions">INSTRUCCIONES</string>
    <string name="help_not_detected">Conecte en la entrada USB el accesorio CJCLIP que se encuentra en su maletin</string>
    <string name="to_active_license">ACTIVAR MI LICENCIA</string>
    <string name="serial_number">Numero de serie</string>
    <string name="question_license">Deseas activar tu licencia</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="exit">Salir</string>
    <string name="remaining_hrs">HORAS DISPONIBLES</string>
    <string name="hours">HORAS</string>
    <string name="see_instructions">Ver instrucciones</string>
    <string name="encabezado">Pantalla para activar aplicacion de diagnostico automotriz</string>
    <string name="activar_aplicacion">Activar aplicacion de \ndiagnostico automotriz</string>
    <string name="message_activate_app">Aplicacion del CJ9 ha\n sido activada</string>
    <string name="salir_sin_activar">Salir sin activar</string>
    <string name="select_connection_type">Seleccione el tipo de conexión </string>
    <string name="choose_how_you_want_to_connect_to_the_device">Elija como desea validar su subscripcion</string>
    <string name="demo_mode_select_device_id">Modo Demo - Seleccione el SN del dispositivo:</string>
    <string name="usb_connection">CJCLIP USB</string>
    <string name="connect_to_device_via_usb_cable">Conecte el CJCLIP a la entrada USB</string>
    <string name="validate_subscription">Subscripción válida</string>
    <string name="verify_your_paid_subscription_to_access_premium_features">Verifique su suscripción pagada para acceder a las funciones de su CJ9PRO</string>
    <string name="determina_si_el_serial_number_ingresado_tiene_una_licencia_vigente">Determina si el numero de serie ingresado tiene una licencia vigente</string>
    <string name="ingresa_serial_number_manualmente_para_verificar_su_licencia">Numero de Serie</string>
    <string name="demo_verificar_licencia">Verificar Licencia</string>
    <string name="verificar_licencia">Verificar Licencia</string>


</resources>