<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context=".DemoActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_verificar_licencia"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    
    <LinearLayout

        android:id="@+id/rowInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="104dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSerialLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_number"
                android:textSize="31dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDeviceId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDeviceId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:maxLength="13"
                    android:text="CJ9MXbf000001"
                    android:textSize="25dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnVerifySubscription"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/verificar_licencia"
        android:textSize="25dp"
        android:textAllCaps="false"
            android:layout_marginTop="25dp"
        android:layout_marginStart="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVerifyDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/determina_si_el_serial_number_ingresado_tiene_una_licencia_vigente"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rowInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_sn"
        android:layout_width="wrap_content"
        android:layout_height="117dp"
        android:gravity="center"
        android:text="Click button get VCI serial number:"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvVerifyDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />


    <Button
        android:id="@+id/button_get_sn"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_sn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Get VCI SN" />

</androidx.constraintlayout.widget.ConstraintLayout>